Changes
-------

0.2.0 (xxxx-xx-xx)
^^^^^^^^^^^^^^^^^^

* High-level commands implemented:

  * generic commands (tests);
  * transactions commands (api stabilization).


0.1.3 (2014-08-08)
^^^^^^^^^^^^^^^^^^

* RedisConnection.execute refactored to support commands pipelining
  (see http://github.com/aio-libs/aioredis/issues/33);

* Several fixes;

* WIP on transactions and commands interface;

* High-level commands implemented and tested:

  * hash commands;
  * hyperloglog commands;
  * set commands;
  * scripting commands;
  * string commands;
  * list commands;


0.1.2 (2014-07-31)
^^^^^^^^^^^^^^^^^^

* create_connection, create_pool, create_redis functions updated:
  db and password arguments made keyword-only
  (see http://github.com/aio-libs/aioredis/issues/26);

* Fixed transaction handling
  (see http://github.com/aio-libs/aioredis/issues/32);

* Response decoding
  (see http://github.com/aio-libs/aioredis/issues/16);


0.1.1 (2014-07-07)
^^^^^^^^^^^^^^^^^^

* Transactions support (in connection, high-level commands have some issues);
* Docs & tests updated.


0.1.0 (2014-06-24)
^^^^^^^^^^^^^^^^^^

* Initial release;
* RedisConnection implemented;
* RedisPool implemented;
* Docs for RedisConnection & RedisPool;
* WIP on high-level API.